# python-control-project

./: .env  .env.example  Dockerfile  ReadME.txt  db.sqlite3  docker-compose.yml  pyproject.toml  setup.cfg
backend/apps/auth/: urls.py
backend/apps/cars/: managers.py  models.py  serializer.py  services.py  urls.py  views.py
backend/apps/cars/migrations/: 0001_initial.py  0002_alter_carmodel_currency_alter_carmodel_status.py  0003_remove_carmodel_currency_remove_carmodel_region_and_more.py  0004_remove_carmodel_price_carmodel_seller_and_more.py
backend/apps/currency/utils/: util.py
backend/apps/listing/: apps.py  filters.py  models.py  serializer.py  urls.py  views.py
backend/apps/listing/migrations/: 0001_initial.py
backend/apps/users/: manager.py  models.py  serializer.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_usermodel_account_type_usermodel_role.py
backend/config/: settings.py  urls.py
backend/config/extra_conf/: jwt_conf.py  rest_conf.py
backend/core/: models.py
backend/core/etc/: currency_rate.py  notify_admin.py  record_view.py
backend/core/management/commands/: wait_db.py
backend/core/permissions/: is_prem_user.py
client/: index.html
config/: settings.py
frontend/src/: App.js  index.js  router.js
frontend/src/components/CarContainer/: Car.js  CarForm.js  Cars.js  OneCarPage.js
frontend/src/constants/: urls.js
frontend/src/pages/: CarPage.js  LoginPage.js
frontend/src/services/: apiServices.js  authServices.js  carServices.js
