[tool.poetry]
name = "python-control-project"
version = "0.1.0"
description = ""
authors = ["Laminatqw <victor.kinash47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.2"
mysqlclient = "^2.2.6"
djangorestframework-simplejwt = "^5.3.1"
django-filter = "^24.3"
celery = "^5.4.0"
redis = "^5.2.0"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.7.0"
requests = "^2.32.3"
send-mail = "^0.0.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
django-dotenv = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
